# Sand-sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  color.c  comp.sh  frame.h  main.c
src/: CMakeLists.txt  color.c  color.h  frame.h  image_button.png~  letterbox.c  letterbox.h  main.c  sand_button.png~
